--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body>
+<body style="background-color: antiquewhite;">
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
